[workspace]
resolver = "2"
members = [
  # Core crates
  "crates/pokerkit",
  "crates/monge",
  "crates/deuce",
  "crates/mccfr",
  "crates/kicker",
  "crates/elkan",
  "crates/lloyd",
  "crates/worldview",
  "crates/horizon",
  "crates/subgame",
  "crates/nlhe",
  "crates/leduc",
  "crates/kuhn",
  "crates/roshambo",
  # Infrastructure crates
  "crates/ledger",
  "crates/bouncer",
  "crates/vitals",
  # Application crates
  "crates/parlor",
  "crates/portal",
  "crates/forge",
  "crates/arena",
  "crates/spar",
  # Validation
  "crates/litmus",
  # Facade crate
  "crates/robopoker",
  # Binary crates
  "bin/backend",
  "bin/trainer",
  "bin/convert",
  "bin/litmus",
  "bin/slumbot",
]

[workspace.package]
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["poker", "mccfr", "gto", "solver", "cfr"]
categories   = ["game-development", "algorithms", "mathematics"]

[workspace.dependencies]
# Internal crates
pokerkit  = { version = "1.1", path = "crates/pokerkit" }
monge     = { version = "1.1", path = "crates/monge" }
deuce     = { version = "1.1", path = "crates/deuce" }
mccfr     = { version = "1.1", path = "crates/mccfr" }
kicker    = { version = "1.1", path = "crates/kicker" }
elkan     = { version = "1.1", path = "crates/elkan" }
lloyd     = { version = "1.1", path = "crates/lloyd" }
worldview = { version = "1.1", path = "crates/worldview" }
horizon   = { version = "1.1", path = "crates/horizon" }
subgame   = { version = "1.1", path = "crates/subgame" }
nlhe      = { version = "1.1", path = "crates/nlhe" }
leduc     = { version = "1.1", path = "crates/leduc" }
kuhn      = { version = "1.1", path = "crates/kuhn" }
roshambo  = { version = "1.1", path = "crates/roshambo" }
arena     = { version = "1.1", path = "crates/arena" }
spar      = { version = "1.1", path = "crates/spar" }
litmus    = { version = "1.1", path = "crates/litmus" }
ledger    = { version = "1.1", path = "crates/ledger" }
bouncer   = { version = "1.1", path = "crates/bouncer" }
vitals    = { version = "1.1", path = "crates/vitals" }
parlor    = { version = "1.1", path = "crates/parlor" }
portal    = { version = "1.1", path = "crates/portal" }
forge     = { version = "1.1", path = "crates/forge" }

# External dependencies
tokio          = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
async-trait    = "0.1"
futures        = "0.3"
anyhow         = "1"
log            = "0.4"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1"
const_format   = "0.2"
uuid           = { version = "1", features = ["v7", "serde"] }
rand           = { version = "0.9.1", features = ["small_rng"] }
tracing        = "0.1"
rayon          = "1"
petgraph       = "0.6"
byteorder      = "1.5"
actix-web      = "4"
actix-cors     = "0.7"
actix-ws       = "0.3"
clap           = { version = "4", features = ["derive"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

# Clippy: any NEW warning fails CI (-D warnings), but the lints below
# are deliberately allowed because they conflict with the codebase's
# accepted style (visual digit grouping for alignment, intentional
# `if same-then-else` for readability, bitset addition via `|`, etc.).
# To re-enable any of these globally, delete the entry; to silence in
# one spot, prefer #[allow(...)] over adding to this list.
[workspace.lints.clippy]
# Visual alignment / dense numeric literals
zero_prefixed_literal       = "allow"
inconsistent_digit_grouping = "allow"
unusual_byte_groupings      = "allow"
# Generic-heavy framework patterns
type_complexity    = "allow"
too_many_arguments = "allow"
module_inception   = "allow"
# Intentional patterns
toplevel_ref_arg           = "allow" # `let ref x = ...` is fine
if_same_then_else          = "allow" # parallel-branch clarity
suspicious_arithmetic_impl = "allow" # Hand uses bitset `|` as addition
should_implement_trait     = "allow" # method-name clashes with stdlib traits
needless_range_loop        = "allow" # indexing-paired arrays
len_without_is_empty       = "allow" # `len` exists where `is_empty` doesn't fit
new_without_default        = "allow" # `new` may take non-trivial args
ptr_arg                    = "allow" # `&Vec<T>` chosen for clarity in spots
option_map_unit_fn         = "allow" # `.map(side-effect-closure)` pattern
inspect_for_each           = "allow" # `.inspect().for_each()` chain
suspicious_map             = "allow" # `.map().count()` is the intended length
unit_arg                   = "allow"
format_in_format_args      = "allow"
# Chain-style: prefer one-statement method chains over if/else, nested
# blocks, or split closure expansions (CLAUDE.md house style).
filter_map_bool_then         = "allow" # `.filter_map(.. cond.then(.. v))`
obfuscated_if_else           = "allow" # `cond.then(.. v).unwrap_or(d)`
unnecessary_lazy_evaluations = "allow" # `unwrap_or_else(.. x)`, `or_else(.. Some(x))`
# Visual-alignment idiom: `if false || a || b || ...` lines up `||` cols.
nonminimal_bool = "allow"
# `let _ = effect();` discards are sometimes intentional for clarity.
let_unit_value = "allow"

[profile.dev]
panic     = "unwind"
opt-level = 3

[profile.release]
lto           = true
panic         = "abort"
opt-level     = 3
codegen-units = 1
strip         = "debuginfo"
