[workspace]
resolver = "2"
members = [
  # Core crates
  "crates/pokerkit",
  "crates/monge",
  "crates/deuce",
  "crates/mccfr",
  "crates/kicker",
  "crates/elkan",
  "crates/lloyd",
  "crates/subgame",
  "crates/nlhe",
  "crates/leduc",
  "crates/kuhn",
  "crates/roshambo",
  # Infrastructure crates
  "crates/daybook",
  "crates/bouncer",
  "crates/vitals",
  # Application crates
  "crates/parlor",
  "crates/portal",
  "crates/forge",
  "crates/arena",
  "crates/spar",
  # Validation
  "crates/litmus",
  # Facade crate
  "crates/robopoker",
  # Binary crates
  "bin/backend",
  "bin/trainer",
  "bin/convert",
  "bin/litmus",
  "bin/slumbot",
]

[workspace.package]
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["poker", "mccfr", "gto", "solver", "cfr"]
categories   = ["game-development", "algorithms", "mathematics"]

[workspace.dependencies]
# Internal crates
pokerkit = { version = "1.1", path = "crates/pokerkit" }
monge    = { version = "1.1", path = "crates/monge" }
deuce    = { version = "1.1", path = "crates/deuce" }
mccfr    = { version = "1.1", path = "crates/mccfr" }
kicker   = { version = "1.1", path = "crates/kicker" }
elkan    = { version = "1.1", path = "crates/elkan" }
lloyd    = { version = "1.1", path = "crates/lloyd" }
subgame  = { version = "1.1", path = "crates/subgame" }
nlhe     = { version = "1.1", path = "crates/nlhe" }
leduc    = { version = "1.1", path = "crates/leduc" }
kuhn     = { version = "1.1", path = "crates/kuhn" }
roshambo = { version = "1.1", path = "crates/roshambo" }
arena    = { version = "1.1", path = "crates/arena" }
spar     = { version = "1.1", path = "crates/spar" }
litmus   = { version = "1.1", path = "crates/litmus" }
daybook  = { version = "1.1", path = "crates/daybook" }
bouncer  = { version = "1.1", path = "crates/bouncer" }
vitals   = { version = "1.1", path = "crates/vitals" }
parlor   = { version = "1.1", path = "crates/parlor" }
portal   = { version = "1.1", path = "crates/portal" }
forge    = { version = "1.1", path = "crates/forge" }

# External dependencies
tokio          = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
async-trait    = "0.1"
futures        = "0.3"
anyhow         = "1"
log            = "0.4"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1"
const_format   = "0.2"
uuid           = { version = "1", features = ["v7", "serde"] }
rand           = { version = "0.9.1", features = ["small_rng"] }
tracing        = "0.1"
rayon          = "1"
petgraph       = "0.6"
byteorder      = "1.5"
actix-web      = "4"
actix-cors     = "0.7"
actix-ws       = "0.3"
clap           = { version = "4", features = ["derive"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

# Clippy gate: `pedantic = warn` + `-D warnings` in CI. Allows below
# are house-style preferences.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# House-style patterns adopted with the robopoker crate reorg (folded
# module trees, bitset arithmetic, index-paired loops, etc.).
module_inception                   = "allow"
if_same_then_else                  = "allow"
should_implement_trait             = "allow"
needless_range_loop                = "allow"
len_without_is_empty               = "allow"
new_without_default                = "allow"
ptr_arg                            = "allow"
suspicious_map                     = "allow"
suspicious_arithmetic_impl         = "allow"
format_in_format_args              = "allow"
filter_map_bool_then               = "allow"
inspect_for_each                   = "allow"
obfuscated_if_else                 = "allow"
unnecessary_lazy_evaluations       = "allow"
toplevel_ref_arg                   = "allow"
inconsistent_digit_grouping        = "allow"
nonminimal_bool                    = "allow"
unusual_byte_groupings             = "allow"
zero_prefixed_literal              = "allow"
option_map_unit_fn                 = "allow"
let_unit_value                     = "allow"
unit_arg                           = "allow"
type_complexity                    = "allow"
too_many_arguments                 = "allow"
wildcard_imports                   = "allow"
enum_glob_use                      = "allow" # house style: prefer glob imports
must_use_candidate                 = "allow"
must_use_unit                      = "allow"
return_self_not_must_use           = "allow"
doc_markdown                       = "allow"
missing_errors_doc                 = "allow"
missing_panics_doc                 = "allow"
cast_precision_loss                = "allow"
cast_possible_truncation           = "allow"
cast_possible_wrap                 = "allow"
cast_sign_loss                     = "allow"
cast_lossless                      = "allow"
float_cmp                          = "allow"
match_same_arms                    = "allow"
match_like_matches_macro           = "allow" # explicit `match … => true` preferred
match_wildcard_for_single_variants = "allow"
needless_pass_by_value             = "allow"
similar_names                      = "allow"
too_many_lines                     = "allow"
module_name_repetitions            = "allow"
struct_field_names                 = "allow"
default_trait_access               = "allow"
unreadable_literal                 = "allow"
large_futures                      = "allow"
unused_async                       = "allow"
struct_excessive_bools             = "allow"
missing_assert_message             = "allow"
into_iter_without_iter             = "allow"
iter_without_into_iter             = "allow"
needless_for_each                  = "allow"
format_push_string                 = "allow"
trivially_copy_pass_by_ref         = "allow"
large_types_passed_by_value        = "allow"
unused_self                        = "allow"
items_after_statements             = "allow"
needless_continue                  = "allow"
redundant_else                     = "allow"
copy_iterator                      = "allow"
many_single_char_names             = "allow"

[profile.dev]
panic     = "unwind"
opt-level = 3

[profile.release]
lto           = true
panic         = "abort"
opt-level     = 3
codegen-units = 1
strip         = "debuginfo"
