[package]
name         = "atlas"
publish      = false
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "Safe subgame solving with world-partitioned belief for CFR framework"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["subgame", "cfr", "game-theory", "pluribus"]
categories   = ["algorithms", "mathematics", "game-development"]

[dependencies]
tracing  = { workspace = true }
pokerkit = { workspace = true }
monge    = { workspace = true }
mccfr    = { version = "1.1", path = "../mccfr", default-features = false }
rand     = "0.9"

[lints]
workspace = true
