[package]
name         = "rbp-auth"
version      = "1.0.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "JWT and Argon2 authentication for robopoker"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["authentication", "jwt", "argon2", "security"]
categories   = ["authentication", "web-programming"]

[features]
default      = []
database     = ["tokio-postgres", "const_format", "rbp-database"]
server       = ["database", "actix-web", "serde_json"]

[dependencies]
rbp-core       = { version = "1.0", path = "../util"                          }
rbp-database   = { version = "1.0", path = "../database", optional = true     }
jsonwebtoken   = "9"
argon2         = { version = "0.5",   features = ["rand"]        }
sha2           = "0.10"
rand           = { version = "0.9.1", features = ["small_rng"]   }
serde          = { version = "1.0",   features = ["derive"]      }
uuid           = { version = "1",     features = ["v7", "serde"] }
tokio-postgres = { version = "0.7",   optional = true, features = ["with-uuid-1"] }
const_format   = { version = "0.2",   optional = true            }
actix-web      = { version = "4.4",   optional = true            }
serde_json     = { version = "1",     optional = true            }
