[package]
name         = "rbp-auth"
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "JWT and Argon2 authentication for robopoker"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["authentication", "jwt", "argon2", "security"]
categories   = ["authentication", "web-programming"]

[features]
default = []
server  = ["tokio-postgres", "const_format", "rbp-database", "actix-web", "serde_json"]

[dependencies]
rbp-core       = { workspace = true }
rbp-database   = { workspace = true, optional = true }
jsonwebtoken   = "9"
argon2         = { version = "0.5", features = ["rand"] }
sha2           = "0.10"
rand           = { workspace = true }
serde          = { version = "1.0", features = ["derive"] }
uuid           = { version = "1", features = ["v5", "v7", "serde"] }
tokio-postgres = { version = "0.7", optional = true }
const_format   = { version = "0.2", optional = true }
actix-web      = { version = "4.4", optional = true }
serde_json     = { version = "1", optional = true }

[lints]
workspace = true
