[package]
name         = "rbp-cards"
version      = "1.0.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "Card representation, hand evaluation, and strategic abstraction primitives"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["poker", "cards", "hand-evaluation", "holdem"]
categories   = ["game-development", "algorithms"]

[features]
default   = []
client    = ["serde"]
shortdeck = []

[dependencies]
rbp-core = { path = "../util" }
rand     = { version = "0.9.1", features = ["small_rng"] }
serde    = { version = "1.0", features = ["derive"], optional = true }
anyhow   = "1.0"
