[package]
name           = "rbp-cards"
version        = "1.0.0"
edition        = "2024"
rust-version   = "1.90"
authors        = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description    = "Card representation, hand evaluation, and strategic abstraction primitives"
license        = "MIT"
repository     = "https://github.com/krukah/robopoker"
keywords       = ["poker", "cards", "hand-evaluation", "holdem"]
categories     = ["game-development", "algorithms"]

[features]
default        = []
client         = []
shortdeck      = []

[dependencies]
rbp-core       = { path = "../util"                      }
rand           = { workspace = true }
serde          = { version = "1.0",   features = ["derive"]    }
anyhow         = "1.0"

[lints]
workspace = true
