[package]
name           = "rbp-clustering"
version        = "0.1.0"
edition        = "2024"
rust-version   = "1.90"
authors        = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description    = "Hierarchical k-means clustering for poker hand abstraction"
license        = "MIT"

[features]
default        = []
database       = ["rbp-database", "tokio-postgres", "const_format", "async-trait"]

[dependencies]
rbp-core       = { path = "../util" }
rbp-cards      = { path = "../cards" }
rbp-gameplay   = { path = "../gameplay" }
rbp-transport  = { path = "../transport" }
rbp-database   = { path = "../database", optional = true }
tokio-postgres = { version = "0.7", optional = true }
const_format   = { version = "0.2", optional = true }
async-trait    = { version = "0.1", optional = true }
rayon          = "1.10"
rand           = { version = "0.9.1", features = ["small_rng"] }
log            = "0.4"
