[package]
name         = "rbp-database"
version      = "1.0.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "PostgreSQL integration for robopoker training and strategy storage"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["postgres", "database", "storage", "serialization"]
categories   = ["database"]

[features]
default      = []

[dependencies]
rbp-core       = { path = "../util" }
rbp-cards      = { path = "../cards" }
rbp-gameplay   = { path = "../gameplay" }
tokio-postgres = "0.7"
async-trait    = "0.1"
const_format   = "0.2"
futures        = "0.3"
log            = "0.4"
tokio          = { version = "1", features = ["rt"] }
