[package]
name         = "dragoman"
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "Generic action translation over finite lattices on a totally-ordered axis"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["action-translation", "pseudo-harmonic", "abstraction", "cfr", "game-theory"]
categories   = ["algorithms", "game-development", "mathematics"]

[dependencies]
rand = { workspace = true }

[lints]
workspace = true
