[package]
name         = "rbp-dto"
version      = "1.0.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "Data transfer objects for robopoker API communication"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["poker", "dto", "api", "serialization"]
categories   = ["data-structures"]

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
